--- a/contact_page.html
+++ b/contact_page.html
@@ -30,33 +30,55 @@
       </nav>
     </header>
 
-    <section class="Customer-Support">
-      <h2> Customer Support </h2>
-      <h4> Customer Service Hours </h4>
-      <p> Mon - Fri </p>       <p> 10am - 9pm </p>
-      <p> Saturday</p>         <p> 9am - 7pm </p>
-      <p> Sunday</p>           <p>10am - 6pm</p>
+    <section class="element-main support-page">
+    <div class="grid element-grid">
+      <div class="Customer-Support">
+        <h2> Customer Support </h2>
+        <h4> Customer Service Hours </h4>
+      <div class="service-hours">
+        <p id="hours"> Mon - Fri: </p>       
+        <p > 10am - 9pm </p>
+      </div>
+
+      <div class="service-hours">
+        <p id="hours"> Saturday: </p>         
+        <p> 9am - 7pm </p>
+      </div>
+
+      <div class="service-hours">
+        <p id="hours"> Sunday:  </p>           
+        <p>10am - 6pm</p>
+      </div>
 
       <h4> Talk to Us! </h4>
-      <img src="img/phone-icon.png" alt="Phone Number Icon" />
-      <p> 1 (778) 112-6272</p>
-      <img src="img/email-icon.png" alt="Email Icon" />           
-      <p>nebulacosmetics@mail.com</p>
-      <img src="img/instagram-icon.png" alt="Instagram Icon" />
-      <p>nebula.cosmetics</p>
-
-      <div id="Google Maps">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14593.86253543211!2d-122.99523973691359!3d49.24206314304469!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1708670941017!5m2!1sen!2sca" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="contact-information">
+        <img src="img/phone-icon.png" alt="Phone Number Icon" />
+        <p> 1 (778) 112-6272</p>
       </div>
-    </section>
+
+      <div class="contact-information">
+        <img src="img/email-icon.png" alt="Email Icon" />           
+        <p>nebulacosmetics@mail.com</p>
+      </div>
+
+      <div class="contact-information">
+        <img src="img/instagram-icon.png" alt="Instagram Icon" />
+        <p>nebula.cosmetics</p>
+      </div>
+      </div>
+    </div>
+
+    <div class="Google-Maps">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14593.86253543211!2d-122.99523973691359!3d49.24206314304469!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sca!4v1708670941017!5m2!1sen!2sca" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+</section>
 
 
     <div class="Customer-Support-Feedback">
       <h2> If you have any questions or concerns, we’d love to hear from you </h2>
       <div class="input-container">
         <label class=form-label for="name">Name</label>
-          <input type="text" id="name" name="firstName" placeholder="First Name" required>
-          <input type="text" id="lastname" name="lastName" placeholder="Last Name" required>
+          <input type="text" id="name" name="firstName" placeholder="Name" required>
         </div>
 
       <div class="input-container">
@@ -74,10 +96,10 @@
           <textarea id="problem" name="problem">Please Include all Necessary Information</textarea>
       </div>
 
-      <div class="btn-container">
-          <input class="btn btn-primary" type="submit">
-        </div>
+      <a class="btn-primary support-button" href="#">Send Message</a>
     </div>
+
+  </section>
 
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
