--- a/shop_page.html
+++ b/shop_page.html
@@ -70,7 +70,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+                <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
               </div>
               <h5 class="product-color">Lab Coat</h5>
               <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
