--- a/cart_page.html
+++ b/cart_page.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <section class="element-main cart-page">
+    <section class="element-main element-secondary cart-page">
       <div class="grid element-grid">
         <div class="checkout-header">
           <table>
