--- a/checkout_page.html
+++ b/checkout_page.html
@@ -101,7 +101,7 @@
               </form>
         </section>
 
-        <section class="order-summary element-main">
+        <section class="element-secondary element-main">
             <div>
                 <h2 class="cart-title">Order Summary</h2>
             </div>
