--- a/shop_page.html
+++ b/shop_page.html
@@ -30,7 +30,7 @@
       </nav>
     </header>
 
-    <section class="element-main">
+    <section class="element-main element-secondary">
         <h1 class="shop-title">All Makeup</h1>
 
       <section class="shop-section">
