--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -32,7 +32,7 @@
       </nav>
     </header>
 
-    <section class="title-banner">
+    <section class="title-banner element-tertiary">
       <h1>The Style Guide</h1>
       <p>This style library will be used as a guide to build the Nebula website.</p>
     </section>
