Product Page CSS
Semi Finished, will still need tweaking and making it properly responsive

--- a/product_page.html
+++ b/product_page.html
@@ -33,43 +33,57 @@
     <section class="element-main">
 
     <div class="product-information">
-      <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+      <div class="product-image">
+        <a href="product_page.html"> <img src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+      </div>
+
+      <div class="product-details">
         <h5 class="product-color">Midnight Shadow</h5>
         <h3 class="product-name">Lustrous Liquid Eyeshadow</h3>
           <div class="product-shades">
             <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
             <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
             <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
-            <p> Shade: Lab Coat </p>
+          </div>
+          <p> Shade: Lab Coat </p>
+
+          <div class="item-add">
+            <input class="quantity-box" type="number" value="1" min="1"/>
+            <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
           </div>
 
-          <input class="quantity-box" type="number" value="1" min="1"/>
-          <a class="btn-secondary product-button" href="cart_page.html">Add to Cart</a>
-
+          <hr>
           <h4>Product Description </h4>
           <p> Go from subtle to standout in seconds with one-stroke color payoff that won’t crease or wear off. our stunning range of universally flattering shades weightlessly wash over lids before drying down to a lustrous, crease-resistant finish. the fluffy, tapered teardrop applicator deposits long-wearing liquid pigments allover and doubles as eyeliner. high-impact color has never been easier. </p>
+          <hr>
           <h4> Ingredients</h4>
-          <p> Isododecane, calcium aluminum borosilicate, mica, trimethylsiloxysilicate, silica, glyceryl tribehenate/isostearate/eicosandioate, calcium sodium borosilicate, octyldodecanol, hydrogenated styrene/isoprene copolymer, disteardimonium hectorite, alcohol denat., caprylic/capric triglyceride, polyhydroxystearic acid, polyisoprene, tin oxide, isostearic acid, pentaerythrityl tetra-di-t-butyl hydroxyhydrocinnamate, lecithin, polyglyceryl-3 polyricinoleate, water/aqua/eau, talc, calcium titanium borosilicate, synthetic fluorphlogopite, bht, titanium dioxide (ci 77891), iron oxides (ci 77491/ ci 77492/ ci 77499). </p>
+          <p> Isododecane, calcium aluminum borosilicate, trimethylsiloxysilicate, silica, ribehenate/isostearate/eicosandioate, calcium sodium borosilicate, octyldodecanol, hydrogenated styrene/isoprene copolymer, disteardimonium hectorite, alcohol denat., caprylic/capric triglyceride, polyhydroxystearic acid, polyisoprene, tin oxide, isostearic acid, pentaerythrityl tetra-di-t-butyl hydroxyhydrocinnamate, lecithin, polyglyceryl-3 polyricinoleate, water/aqua/eau, talc, calcium titanium borosilicate, synthetic fluorphlogopite, bht, titanium dioxide (ci 77891), iron oxides (ci 77491/ ci 77492/ ci 77499). </p>
+      </div>
     </div>
 
+    <div class="related-items">
+    <h3> Related Items </h3>
     <div class="product-reccomendations">
-    <h4> Related Items </h4>
     <div class="product-reccs">
       <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"> </a>
-      <h5> Essential Drip Lip Oil </h5>
+      <h5> Lavander Kiss </h5>
+      <h4> Essential Drip Lip Oil </h4>
     </div>
 
    <div class="product-reccs">
       <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="Eclipse Blush & Lipstick"> </a>
-      <h5> Satin Matte Blush </h5>
+      <h5> Hypernova</h5>
+      <h4> Satin Matte Blush </h4>
     </div>
 
    <div class="product-reccs">
       <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="On Your Collar Plumping Lip Gloss"> </a>
-      <h5> Plumping Lip Gloss</h5>
+      <h5> On Your Collar </h5>
+      <h4> Plumping Lip Gloss</h4>
     </div>
 
     </div>
+  </div>
   </section>
 
 
