Changing Home_Page to Index
Also fixed all the navbar links

--- a/style_guide_page.html
+++ b/style_guide_page.html
@@ -21,7 +21,7 @@
           <a class="nav-item" href="about_page.html">About</a>
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
-        <a href="home_page.html">
+        <a href="index.html">
           <img src="svg/NEBULA.svg" alt="Logo" class="logo"/>
         </a>
         <div class="nav-flex">
