--- a/about_page.html
+++ b/about_page.html
@@ -19,7 +19,7 @@
           <a class="nav-item" href="about_page.html">About</a>
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
-        <a href="style_guide_page.html">
+        <a href="index.html">
           <img src="svg/NEBULA.svg" alt="Logo" class="logo" />
         </a>
         <div class="nav-flex">
