--- a/about_page.html
+++ b/about_page.html
@@ -30,6 +30,44 @@
       </nav>
     </header>
 
+      <div class="about-nebula">
+        <div class="#">
+          <h2>About Nebula </h2>
+          <p> Nebula is created as a brand that produces product with a celestial fusion of artistry and science, offering a cosmic array of makeup products designed to empower and inspire. </p>
+          <p> At Nebula, anyone can embark on a cosmic journey of self-expression and empowerment where beauty knows no bounds and every product tells a story </p>
+        </div>
+        <div class="#">
+          <img src="img/about-us-founder.png" alt="Nebula Founder, Adriana Venti" />
+        </div>
+      </div>
+
+      <div class="founder-quote">
+        <div class="#">
+        <img src="img/about-us-products.png" alt="A picture of several Nebula Products" />
+        </div>
+
+        <div class="#">
+          <h5> FOUNDER QUOTE </h5>
+          <h3>“Nebula is about being comfortable with yourself. There is no longer a need to be perfect, just be your most authentic self.” </h3>
+          <h5> ADRIANA VENTI </h5>
+        </div>
+      </div>
+
+      <div class="about-inclusivity">
+        <div class="#">
+          <h2>Inclusivity Shines </h2>
+          <p> At Nebula, we believe that beauty is for people of all shades, personalities, attitudes, cultures, and race. We celebrate diversity and aim to help everyone find their perfect match and unleash their inner star. Everyone should feel included, and we want you to explore what creativity means to you. </p>
+          <p> Make up provides the opportunity to help people feel even more beautiful than they already are in their own skin. Together we’re building a safe, welcoming space in beauty and beyond. . </p>
+        </div>
+        <div class="#">
+          <img src="img/about-us-models.png" alt="Image of 2 models representing Nebula's Inclusivity Motto" />
+        </div>
+      </div>
+
+      <div class="beauty-with-purpose">
+        <h2>Beauty with Purpose </h2>
+      </div>
+
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
