Made Text Alt more Meaningful in All Pages

--- a/cart_page.html
+++ b/cart_page.html
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo" class="logo"/>
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo"/>
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -55,7 +55,7 @@
             <img
               class="img"
               src="img/essential-drip-lip-oil.png"
-              alt="Essential Drip Lip Oil in the Shade Lavender Kiss"
+              alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"
             />
             <div class="cart-product-name">
               <p class="mini-product-name">Essential Drip Lip Oil</p>
@@ -73,7 +73,7 @@
             <img
               class="img"
               src="img/highlight-topper.png"
-              alt="Highlighter Topper in the Shade Miss Neptune"
+              alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"
             />
             <div class="cart-product-name">
               <p class="mini-product-name">Highlighter Topper</p>
@@ -91,7 +91,7 @@
             <img
               class="img"
               src="img/lustrous-liquid-eyeshadow.png"
-              alt="Lustrous Liquid Eyeshadow in the Shade Lab Coat"
+              alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"
             />
             <div class="cart-product-name">
               <p class="mini-product-name">Lustrous Liquid Eyeshadow</p>
@@ -122,7 +122,7 @@
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo" class="footer-logo" />
+        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
 
         <div class="footer-nav-container">
           <div class="footer-nav">
