--- a/checkout_page.html
+++ b/checkout_page.html
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo" class="logo"/>
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo"/>
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -108,7 +108,7 @@
             <div class="order-list">
                 <div class="order-container">
                     <div class = "cart-info">
-                        <img class="img-checkout" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil Lavender Kiss">
+                        <img class="img-checkout" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss">
                         <div class="cart-product-name">
                             <p class="checkout-product-name">Essential Drip Lip Oil</p>
                             <p class="checkout-product-shade">Lavender Kiss</p>
@@ -137,7 +137,7 @@
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo" class="footer-logo" />
+        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
 
         <div class="footer-nav-container">
           <div class="footer-nav">
