--- a/product_page.html
+++ b/product_page.html
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo" class="logo" />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo" />
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -34,16 +34,16 @@
 
     <div class="product-information">
       <div class="product-image">
-        <a href="product_page.html"> <img src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+        <a href="product_page.html"> <img src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
       </div>
 
       <div class="product-details">
         <h5 class="product-color">Midnight Shadow</h5>
         <h3 class="product-name">Lustrous Liquid Eyeshadow</h3>
           <div class="product-shades">
-            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
-            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
-            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
+            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+            <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
           </div>
           <p> Shade: Lab Coat </p>
 
@@ -65,19 +65,19 @@
     <h3> Related Items </h3>
     <div class="product-reccomendations">
     <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"> </a>
+      <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
       <h5> Lavander Kiss </h5>
       <h4> Essential Drip Lip Oil </h4>
     </div>
 
    <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="Eclipse Blush & Lipstick"> </a>
+      <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
       <h5> Hypernova</h5>
       <h4> Satin Matte Blush </h4>
     </div>
 
    <div class="product-reccs">
-      <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="On Your Collar Plumping Lip Gloss"> </a>
+      <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
       <h5> On Your Collar </h5>
       <h4> Plumping Lip Gloss</h4>
     </div>
@@ -91,7 +91,7 @@
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
       <div class="footer-box">
-        <img src="svg/NEBULA.svg" alt="Logo" class="footer-logo" />
+        <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
 
         <div class="footer-nav-container">
           <div class="footer-nav">
