--- a/shop_page.html
+++ b/shop_page.html
@@ -20,7 +20,7 @@
           <a class="nav-item" href="events_page.html">Events</a>
         </div>
         <a href="index.html">
-          <img src="svg/NEBULA.svg" alt="Logo" class="logo"/>
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="logo"/>
         </a>
         <div class="nav-flex">
           <a class="nav-item" href="style_guide_page.html">Style Guide</a>
@@ -38,15 +38,15 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-              <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="Essential Drip Lip Oil"> </a>
+              <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
               </div>
               <h5 class="product-color">Lavender Kiss</h5>
               <h4 class="product-name">Essential Drip Lip Oil</h4>
               <div class="product-shade-container">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Color Options">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Color Options">
+                <img class="img product-shade" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
+                <img class="img product-shade" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
+                <img class="img product-shade" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
+                <img class="img product-shade" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
               </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
@@ -55,13 +55,13 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="Highlight Topper"> </a>
+                <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"> </a>
               </div>
               <h6 class="product-color">Miss Neptune</h6>
               <h4 class="product-name">Highlighter Topper</h4>
               <div class="product-shade-container">
-                <img class="img product-shade" src="img/highlight-topper-color1.png" alt="Highlight Topper Color Options">
-                <img class="img product-shade" src="img/highlight-topper-color2.png" alt="Highlight Topper Color Options">
+                <img class="img product-shade" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
+                <img class="img product-shade" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
               </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
@@ -70,14 +70,14 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="Lustrous Liquid Eyeshadow"> </a>
+                <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
               </div>
               <h5 class="product-color">Lab Coat</h5>
               <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
               <div class="product-shade-container">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Color Options">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Color Options">
+                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
               </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
@@ -86,7 +86,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-              <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="Eclipse Blush & Lipstick"> </a>
+              <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
               </div>
               <h5 class="product-color">Eclipse</h5>
               <h4 class="product-name">Blush & Lipstick</h4>
@@ -97,7 +97,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/satin-matte-blush.png" alt="Hypernova Satin Matte Blush"> </a>
+                <a href=#> <img class="img img-product" src="img/satin-matte-blush.png" alt="A Dark Red Hypernova Matte Lipstick"> </a>
               </div>
               <h6 class="product-color">Hypernova</h6>
               <h4 class="product-name">Satin Matte Blush</h4>
@@ -108,7 +108,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/matte-lipstick.png" alt="Drive In Movie Matte Lipstick"> </a>
+                <a href=#> <img class="img img-product" src="img/matte-lipstick.png" alt="A Circular Compact Drive in Movie Pink Satin Matte Blush"> </a>
               </div>
               <h5 class="product-color">Drive In Movie</h5>
               <h4 class="product-name">Matte Lipstick</h4>
@@ -119,7 +119,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-              <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="On Your Collar Plumping Lip Gloss"> </a>
+              <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
               </div>
               <h5 class="product-color">On Your Collar</h5>
               <h4 class="product-name">Plumping Lip Gloss</h4>
@@ -130,7 +130,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/kohl-eyeliner-pencil.png" alt="At the Borderline Kohl Eyeliner Pencil"> </a>
+                <a href=#> <img class="img img-product" src="img/kohl-eyeliner-pencil.png" alt="A White At the Borderline Kohl Eyeliner Pencil"> </a>
               </div>
               <h6 class="product-color">At the Borderline</h6>
               <h4 class="product-name">Kohl Eyeliner Pencil</h4>
@@ -141,7 +141,7 @@
           <div class="product-listing-container">
             <div class="product-container">
               <div class="image-container">
-                <a href=#> <img class="img img-product" src="img/lip-stain-marker.png" alt="Practically Permanent Lip Stain Marker"> </a>
+                <a href=#> <img class="img img-product" src="img/lip-stain-marker.png" alt="A Practically Permanent Red Lip Stain Marker"> </a>
               </div>
               <h5 class="product-color">Practically Permanent</h5>
               <h4 class="product-name">Lip Stain Marker</h4>
@@ -155,7 +155,7 @@
     <!-- // FOOTER SECTION -->
     <footer class="footer-container">
         <div class="footer-box">
-          <img src="svg/NEBULA.svg" alt="Logo" class="footer-logo" />
+          <img src="svg/NEBULA.svg" alt="Logo of Nebula Makeup Brand" class="footer-logo" />
   
           <div class="footer-nav-container">
             <div class="footer-nav">
