Fixed Shop Page
Fixed Image Cropping during Hover
Fixed Shade Cropping
Added Shades to 6 Products

--- a/shop_page.html
+++ b/shop_page.html
@@ -37,16 +37,24 @@
         <div class="product-listing">
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
               <a href=#> <img class="img img-product" src="img/essential-drip-lip-oil.png" alt="A Pink Essential Lip Drip Oil in the shade Lavender's Kiss"> </a>
               </div>
               <h5 class="product-color">Lavender Kiss</h5>
               <h4 class="product-name">Essential Drip Lip Oil</h4>
               <div class="product-shade-container">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
-                <img class="img product-shade" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color1.png" alt="Essential Drip Lip Oil Shade Options in Purple">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color2.png" alt="Essential Drip Lip Oil Shade Options in Pink">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color3.png" alt="Essential Drip Lip Oil Shade Options in Green">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/essential-drip-lip-oil-color4.png" alt="Essential Drip Lip Oil Shade Options in Dark Brown">
+                </div>
               </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
@@ -54,14 +62,18 @@
 
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
                 <a href=#> <img class="img img-product" src="img/highlight-topper.png" alt="A Compact Powder Highlighter Topper in the Shade Miss Neptune"> </a>
               </div>
               <h6 class="product-color">Miss Neptune</h6>
               <h4 class="product-name">Highlighter Topper</h4>
               <div class="product-shade-container">
-                <img class="img product-shade" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
-                <img class="img product-shade" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/highlight-topper-color1.png" alt="Highlight Topper Shade Options in Purple">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/highlight-topper-color2.png" alt="Highlight Topper Shade Options in Green">
+                </div>
               </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
@@ -69,15 +81,21 @@
 
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
                 <a href="product_page.html"> <img class="img img-product" src="img/lustrous-liquid-eyeshadow.png" alt="A Lustrous Liquid Eyeshadow in the Shade Lab Coat"> </a>
               </div>
               <h5 class="product-color">Lab Coat</h5>
               <h4 class="product-name">Lustrous Liquid Eyeshadow</h4>
               <div class="product-shade-container">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
-                <img class="img product-shade" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color1.png" alt="Lustrous Liquid Eyeshadow Shade Options in White">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color2.png" alt="Lustrous Liquid Eyeshadow Shade Options in Pink-Brown">
+                </div>
+                <div class="product-shade-crop">
+                  <img class="product-shade-display" src="img/lustrous-liquid-eyeshadow-color3.png" alt="Lustrous Liquid Eyeshadow Shade Options in Purple">
+                </div>
               </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
@@ -85,66 +103,84 @@
 
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
               <a href=#> <img class="img img-product" src="img/blush-and-lipstick.png" alt="A One-in-Two Red Eclipse Blush & Lipstick Product"> </a>
               </div>
               <h5 class="product-color">Eclipse</h5>
               <h4 class="product-name">Blush & Lipstick</h4>
+              <div class="product-shade-crop">
+                <img class="product-shade-display" src="img/blush-and-lipstick-shade.png" alt="Eclipse Blush & Lipstick Shade Option in Peach">
+              </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
 
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
                 <a href=#> <img class="img img-product" src="img/satin-matte-blush.png" alt="A Dark Red Hypernova Matte Lipstick"> </a>
               </div>
               <h6 class="product-color">Hypernova</h6>
               <h4 class="product-name">Satin Matte Blush</h4>
+              <div class="product-shade-crop">
+                <img class="product-shade-display" src="img/satin-matte-blush-shade.png" alt="Satin Matte Blush Shade Option in Pink">
+              </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
 
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
                 <a href=#> <img class="img img-product" src="img/matte-lipstick.png" alt="A Circular Compact Drive in Movie Pink Satin Matte Blush"> </a>
               </div>
               <h5 class="product-color">Drive In Movie</h5>
               <h4 class="product-name">Matte Lipstick</h4>
+              <div class="product-shade-crop">
+                <img class="product-shade-display" src="img/matte-lipstick-shade.png" alt="Matte Lipstick Shade Option in Nude">
+              </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
           
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
               <a href=#> <img class="img img-product" src="img/plumping-lip-gloss.png" alt="A White On Your Collar Plumping Lip Gloss"> </a>
               </div>
               <h5 class="product-color">On Your Collar</h5>
               <h4 class="product-name">Plumping Lip Gloss</h4>
+              <div class="product-shade-crop">
+                <img class="product-shade-display" src="img/plumping-lip-gloss-shade.png" alt="Plumping Lip Gloss Shade Option in White">
+              </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
 
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
                 <a href=#> <img class="img img-product" src="img/kohl-eyeliner-pencil.png" alt="A White At the Borderline Kohl Eyeliner Pencil"> </a>
               </div>
               <h6 class="product-color">At the Borderline</h6>
               <h4 class="product-name">Kohl Eyeliner Pencil</h4>
+              <div class="product-shade-crop">
+                <img class="product-shade-display" src="img/kohl-eyeliner-pencil-shade.png" alt="Kohl Eyeliner Pencil Shade Option in White">
+              </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
 
           <div class="product-listing-container">
             <div class="product-container">
-              <div class="image-container">
+              <div class="image-container img-crop">
                 <a href=#> <img class="img img-product" src="img/lip-stain-marker.png" alt="A Practically Permanent Red Lip Stain Marker"> </a>
               </div>
               <h5 class="product-color">Practically Permanent</h5>
               <h4 class="product-name">Lip Stain Marker</h4>
+              <div class="product-shade-crop">
+                <img class="product-shade-display" src="img/lip-stain-marker-shade.png" alt="Lip Stain Marker Shade Option in Red">
+              </div>
             </div>
             <a class="btn-secondary product-button" href="cart_page.html">Add to Cart $17</a>
           </div>
